# atm-project

./: .gitignore  README.md  dev_process.md  docker-compose.yml  product.md  requirements.txt
.dvc/: config
.experiments/data_collection/: requirements.txt
.experiments/prediction_model/: DL_models_training.ipynb  ML_models_training.ipynb  train_with_district_region.csv
.github/workflows/: publish-image-to-docker-hub.yml  release-prediction-service.yml  release-streamlit-app.yml  release-tg-bot.yml  release-web-ui.yml
data-collection/: .example_env
data_collection/: Dataset description.ipynb  Dataset extention with dadata.ipynb  dataset_description.ipynb  extend_dataset_with_pois.py  extend_geo_data_initial_dataset.py  extending_data_with_dadata_cleaner_api.ipynb  requirements.txt
eda/: analyze.ipynb  eda.ipynb  get_dataset_for_eda.ipynb
prediction-model/: README.md  config.py  pyproject.toml  train.py
prediction-model/config/: main_conf.yaml
prediction-model/config/files/: dataset_files.yaml  model_files.yaml
prediction-model/data/: .gitignore  Encoder.pickle.dvc  Imputer.pickle.dvc  Model.pickle.dvc  Scaler.pickle.dvc  x_test_sc.npy.dvc  x_train_sc.npy.dvc  y_test.npy.dvc  y_train.npy.dvc
prediction-model/prediction_model/services/: features.py
prediction-model/prediction_model/stages/: extract_features.py  load_data.py  train.py
prediction-service/: README.md  requirements.txt
prediction_model/: prediction_model.ipynb
streamlit-ui/: Dockerfile  app.py  requirements.txt
tg-bot/: Dockerfile  README.md
web-ui/: index.html
(+84 files in other folders)
