[tool.poetry]
name = "prediction-model"
version = "0.1.0"
description = "The package contains a service for training a model for predicting the popularity of ATMs"
authors = ["Anton Zaitsev <antonzaitsev474@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
hydra-core = "^1.3.2"
dvc-gdrive = "^3.0.1"

[tool.poetry.group.dev.dependencies]
dvc = "^3.51.2"
mlflow = "^2.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
